--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,4 +1,4 @@
-.navbar {
+.header {
   width: 100%;
   cursor: pointer;
   position: fixed;
@@ -6,16 +6,18 @@
   justify-content: center;
   text-transform: uppercase;
   background-color: #39445a;
-  font-family: "Montserrat", sans-serif;
-  font-size: 35px;
   padding-bottom: 15px;
   box-shadow: 0px 1px 5px black;
   color: white;
   z-index: 100;
 }
 
+.header img {
+  height: 3rem;
+}
+
 @media (max-width: 1000px) {
-  .navbar {
+  .header {
     padding-top: 15px;
     font-size: 6.4vw;
   }
